<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie_name_dummy">My Hero Academia: Two Heroes</string>
    <string name="movie_description_dummy">All Might and Deku accept an invitation to go abroad to a floating and mobile manmade city, called \'I Island\', where they research quirks as well as hero supplemental items at the special \'I Expo\' convention that is currently being held on the island. During that time, suddenly, despite an iron wall of security surrounding the island, the system is breached by a villain, and the only ones able to stop him are the students of Class 1-A.</string>
    <string name="overview">Overview</string>
    <string name="fav">fav</string>
    <string name="tab_movie_title">Movies</string>
    <string name="tab_tv_title">TV Show</string>
    <string name="detail_movie_title">Movie Detail</string>
    <string name="detail_tv_title">TV Show Detail</string>
    <string name="title_home">Home</string>
    <string name="title_fav">Favorite</string>
    <string name="toast_add_fav">Added to favorites</string>
    <string name="toast_add_fav_failed">Failed add data</string>
    <string name="toast_remove_fav">Removed from favorites</string>
    <string name="toast_remove_fav_failed">Failed remove data</string>
    <string name="sb_no_data">No data yet</string>
    <string-array name="movie_names">
        <item>My Hero Academia: Two Heroes</item>
        <item>Flavors of Youth</item>
        <item>I Want to Eat Your Pancreas</item>
        <item>Mirai</item>
        <item>Doraemon the Movie: Nobita\'s Treasure Island</item>
        <item>Pokémon the Movie: The Power of Us</item>
        <item>Detective Conan Zero the Enforcer</item>
        <item>Attack on Titan: The Roar of Awakening</item>
        <item>Digimon Adventure Tri. - Chapter 6: Future</item>
        <item>One Piece: Episode of Sky Island</item>
    </string-array>
    <string-array name="movie_descriptions">
        <item>All Might and Deku accept an invitation to go abroad to a floating and mobile manmade city, called \'I Island\', where they research quirks as well as hero supplemental items at the special \'I Expo\' convention that is currently being held on the island. During that time, suddenly, despite an iron wall of security surrounding the island, the system is breached by a villain, and the only ones able to stop him are the students of Class 1-A.</item>
        <item>Three different stories of youth set in different cities of China. 1 Shanghai Love. 2 Sunny Breakfast. 3 Small Fashion Show. Directed by Zhenxing Yi, the plot revolves around a young man working in Beijing. He used to live with his grandma in his less developed hometown Hunan. While he is drown in his childhood reminiscence, he receives an unexpected call – Grandma is in critical condition.</item>
        <item>Spring time in April and the last of the cherry blossoms are still in bloom. The usually aloof bookworm with no interest in others comes across a book in a hospital waiting room. Handwritten on the cover are the words: \"Living with Dying.\" He soon discovers that it is a diary kept by his very popular and genuinely cheerful classmate, Sakura Yamauchi, who reveals to him that she is secretly suffering from a pancreatic illness and only has a limited time left. It is at this moment that she gains just one more person to share her secret. Trying to maintain a normal life as much as possible, Sakura is determined to live her life to the fullest until the very last day. As her free spirit and unpredictable actions throw him for a loop, his heart begins to gradually change.</item>
        <item>The movie follows a 4-year old boy who is struggling to cope with the arrival of a little sister in the family until things turn magical. A mysterious garden in the backyard of the boy\'s home becomes a gateway allowing the child to travel back in time and encounter his mother as a little girl and his great-grandfather as a young man. These fantasy-filled adventures allow the child to change his perspective and help him become the big brother he was meant to be.</item>
        <item>The story is based on Robert Louis Stevenson\'s Treasure Island novel.</item>
        <item>Every year the citizens of Fura City celebrate a Wind Festival. Where people live together with the wind. Long Ago, on the final day of the festival the Legendary Pokemon Lugia and bestow the blessings of the wind upon the people. This Film Focuses on Everyone\'s Story. from Lisa, a high school girl who is just starting out as a Pokemon trainer, to Karachi, a guy who can\'t stop lying to Torito, a researcher who lacks confidence in himself, to Hisui, an old lady who hates touching Pokemon, and Rarugo, a mysterious young girl who watches over the forest by herself.</item>
        <item>After a sudden explosion at Edge of Ocean island in Tokyo, Tōru Amuro, codename Zero, begins to investigate. Meanwhile, private eye Kogorō is arrested as a suspect, so Conan Edogawa conducts his own investigation to prove his innocence, but Amuro stands in his way.</item>
        <item>Eren Yeager and others of the 104th Training Corps have just begun to become full members of the Survey Corps. As they ready themselves to face the Titans once again, their preparations are interrupted by the invasion of Wall Rose—but all is not as it seems as more mysteries are unraveled. As the Survey Corps races to save the wall, they uncover more about the invading Titans and the dark secrets of their own members.</item>
        <item>The world has begun to collapse. The rampaging Meicoomon absorbs Tailmon, who underwent a dark evolution, and changes form into the immensely powerful Ordinemon. In accordance with Yggdrasil\'s expectation, the real world is about to be engulfed by the Digital World. Meanwhile, Homeostasis considers Ordinemon to be out of control and puts into motion its final plan that will entangle the real world. Then the time comes for the DigiDestined to arrive at a final decision. What future do they choose for themselves?</item>
        <item>The special will be the first in the \"Episode of\" series to cover the Skypeia arc, and will feature a character who did not appear in the original Skypeia arc from the anime.</item>
    </string-array>
    <string-array name="movie_posters">
        <item>https://image.tmdb.org/t/p/w1280/5Ui54VS5oxmPzzdEGJEUkW0uESI.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/ueHeH5ergeHx27L4SCI9qlmwczA.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/vHdVU0HyyB6k6kuYt8qjwTz9one.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/b9XvI4Nehzi0nXyNVD6DtT39P6l.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/xiLRClQmKSVAbiu6rgCRzNQjcSX.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/eakBFzG1dZn0uouBgv6kYtPXLkT.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/skJl9GXEXtKoPNtsgslS2swO3zp.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/nLe47v3H04j5he8b4Jk2WTTUwjw.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/85RWLY80P6NRcwl7CHmh0fAAGyQ.jpg</item>
        <item>https://image.tmdb.org/t/p/w1280/rlXwxRqZa0dMssgYLQeoNo4WiXg.jpg</item>
    </string-array>
    <string-array name="tv_show_names">
        <item>Death Note</item>
        <item>Fullmetal Alchemist: Brotherhood</item>
        <item>Steins;Gate</item>
        <item>Psycho-Pass</item>
        <item>Parasyte -the maxim-</item>
        <item>ERASED</item>
        <item>Terror in Resonance</item>
        <item>Noragami</item>
        <item>Assassination Classroom</item>
        <item>Blue Exorcist</item>
    </string-array>
    <string name="change_lang">Language Settings</string>
    <string name="change_lang_sub">Change Language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_sub">Reminder for return to app</string>
    <string name="daily_release">Release Reminder</string>
    <string name="daily_release_sub">Reminder today release</string>
</resources>